@@ -530,7 +530,7 @@ same as -E and -F but is applied between slices of the auxiliary archive (-@ opt
 .TP 20
 -K, --key [[<algo>]:]<string>
 .TP 20
--K, --key gnupg:[<algo>]:email[,email[...]]
+-K, --key gnupg:[<algo>]:keyid/email[,keyid/email[...]]
 .RS
 .B In the first syntax,
 encrypt/decrypt the archive using the <algo> cipher with the <string> as pass phrase. An encrypted archive can only be read if the same pass phrase is given (symmetric encryption). Available ciphers are "blowfish" (alias "bf"), "aes", "twofish", "serpent" and "camellia" for strong encryption and "scrambling" (alias "scram") for a very weak encryption. By default if no <algo> or no ':' is given, the aes256 cipher is assumed (default was blowfish up to 2.5.x). If your password contains a column ':' you need to specify the cipher to use (or at least use the initial ':' which is equivalent to 'bf:'). If the <string> is empty the pass phrase will be asked at execution time. Thus, the smallest argument that -K can receive is ':' which means aes256 cipher with the pass phrase asked at execution time.
@@ -540,7 +540,7 @@ Note that giving the passphrase as argument to -K (or -J or '-$' see below) may 
 since archive format 9 (archive generated by release 2.5.0 and following) at reading time, it is not necessary to provide the encryption algorithm used, just the passphrase is required, dar will figure out which encryption algorithm had been used at archive creation time. You can either ommit -K in which case dar will ask for the passphrase at execution time, or you can use -K <string> in a DCF file as explained above (avoid using -K directly on command-line).
 .PP
 .B The second syntax
-starts with the word "gnupg" followed by a column ':' . In that situation, the same set or symmetric encryption algorithms as described above is available after the column, but the passphrase is not given by the user but randomly chosen by libdar and encrypted using the public key of the target users which email is given in a comma separated list. This random key (see also --key-length below), once encrypted is placed at the beginning and at the end of the generated archive. At reading time only the listed user will be able to read that archive thanks to their respective private key. This feature implies that each user (the archive creator as well as the target users) have their GnuPG keyring set properly. In particular, the archive creator must have validated the public keys of the target users, and the target users must own the corresponding private key in their keyring. Example: using "--key gnupg::bob@nowhere.org,joe@somewhere.com" will generate an aes256 encrypted archive which passprhase randomly chosen by libdar will be encrypted with the public keys of bob@nowhere.org and joe@somewhere.com. To use blowfish in place of ars256 one could use "--key gnupg:bf:bob@nowhere.org,joe@somewhere.com". Note that no check is done about the trust you have set in GPG keyring that a particular public key is owned by the phyical person you expect. See also --sign option below.
+starts with the word "gnupg" followed by a column ':' . In that situation, the same set or symmetric encryption algorithms as described above is available after the column, but the passphrase is not given by the user but randomly chosen by libdar and encrypted using the public key of the target users which email okkeyid (since 2.7.0) is given in a comma separated list. This random key (see also --key-length below), once encrypted is placed at the beginning and at the end of the generated archive. At reading time only the listed user will be able to read that archive thanks to their respective private key. This feature implies that each user (the archive creator as well as the target users) have their GnuPG keyring set properly. In particular, the archive creator must have validated the public keys of the target users, and the target users must own the corresponding private key in their keyring. Example: using "--key gnupg::bob@nowhere.org,joe@somewhere.com" will generate an aes256 encrypted archive which passprhase randomly chosen by libdar will be encrypted with the public keys of bob@nowhere.org and joe@somewhere.com. To use blowfish in place of ars256 one could use "--key gnupg:bf:bob@nowhere.org,joe@somewhere.com". Note that no check is done about the trust you have set in GPG keyring that a particular public key is owned by the phyical person you expect. See also --sign option below.
 .PP
 Note that if you have set a passphrase on your private key, dar will ask it dynamically, which requires dar to be run from a terminal. No other way has been provided to transmit a private key's passphrase to libdar. In consequence if you want to use dar/libdar in scripts and make use of public key algorithm you should avoid setting a passphrase to the private key you want to use. See also GNUPGHOME in the ENVIRONMENT section at the end of this document.
 .PP
